prepare base model completed

--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,8 @@
-key: val
+AUGMENTATION: True
+IMAGE_SIZE: [224, 224, 3] # as per VGG 16 model
+BATCH_SIZE: 16
+INCLUDE_TOP: False # train only customer layer instead of training from stratch
+EPOCHS: 8
+CLASSES: 2  # outputs only two classes
+WEIGHTS: imagenet # alread trained on this imagenet dataset
+LEARNING_RATE: 0.01
