--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,9 @@ data_ingestion:
   source_URL: https://github.com/miguelhermar/Datasets-repo/raw/main/Chicken-fecal-images.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.h5 # downloads the base model (vg16) and saves it as it is
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5 # after custom layer added
