--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,3 +12,9 @@ prepare_base_model:
   root_dir: artifacts/prepare_base_model
   base_model_path: artifacts/prepare_base_model/base_model.h5 # downloads the base model (vg16) and saves it as it is
   updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5 # after custom layer added
+
+
+prepare_callbacks:
+  root_dir: artifacts/prepare_callbacks
+  tensorboard_root_log_dir: artifacts/prepare_callbacks/tensorboard_log_dir
+  checkpoint_model_filepath: artifacts/prepare_callbacks/checkpoint_dir/model.h5
